# red-team-agent

./: .gitignore  .gitmodules  CLAUDE.md  README.md  all-labs.html  clean_history.py  clean_trace.py  create_application.py  d8baedbc-041b-4a35-bb25-73a5cd81aae9.json  diff.txt  docker-compose.yml  extract_burp_lab.py  gemini_http.py  gemini_intruder.py  get_all_labs.py  history.json  http_brain.py  http_intruder.py  httplib.py  intruder.py  last_url.txt  logger.py  main.py  new_json.py  o3_intruder.py  opik.txt  parse_burp.py  pentest_bot.py  pyproject.toml  read_reports.py  requests.txt  requirements.txt  results.txt  start_agent.py  start_cnc.py  test_agent_intruder.py  test_agent_multi.py  test_browser.py  test_browsing.py  test_client.py  (+20 more)
.cursor/rules/: comments.mdc  testing-guide.mdc
cnc/: CLAUDE.md  README.md  SUMMARY.txt  alembic.ini  main.py  requirements.txt  test_db.sqlite  workers_launcher.py
cnc/app/: main.py
cnc/database/: crud.py  models.py  session.py
cnc/docs/: QUEUE_REFACTORING.md
cnc/helpers/: queue.py  uuid.py
cnc/migrations/: env.py
cnc/routers/: agent.py  application.py
cnc/schemas/: application.py  http.py
common/: agent.py
eval/: challenges.py  complex_reports.py  core.py  extract_params.py  scores.py
labeled_requests/: localhost8000_.json  localhost8000__7.json  localhost8000_api_products_2_variants_.json  localhost8000_api_products_2_variants__17.json  localhost8000_api_products_2_variants__23.json  localhost8000_api_products_2_variants__24.json  localhost8000_favicon.ico_.json  localhost8000_inventory_.json  localhost8000_inventory__21.json  localhost8000_inventory_create_.json  localhost8000_inventory_create__18.json  localhost8000_inventory_create__22.json  localhost8000_inventory_create__25.json  localhost8000_inventory_list_.json  localhost8000_inventory_list__20.json  localhost8000_inventory_list__26.json  localhost8000_orders_.json  localhost8000_orders_4_.json  localhost8000_orders_4_add-items_.json  localhost8000_orders_4_add-items__12.json  localhost8000_orders_create_.json  localhost8000_orders_create__10.json  localhost8000_products_.json  localhost8000_products_23_.json  localhost8000_products_create_.json  localhost8000_products_create__5.json  localhost8000_static_js_scripts.js.json
pentest-bot/: explore_site.py  test_logger.py
scrapers/: hackerone.py  process_reports.py
scripts/: update_labs_json.py
src/: llm_providers.py  utils.py
tests/: conftest.py  history.json  server.py  test_auth_request_mod.py  test_authz.py  test_authz_new.py  test_authz_testgen.py  test_browsing.py  test_discovery.py  test_httplib.py  test_intruder.py  test_observation.py  test_score_equals_json.py
(+130 files in other folders)
